--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -46,9 +46,12 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/film_poster"
                 app:layout_constraintTop_toTopOf="@+id/film_poster"
-                tools:text="Name" />
+                tools:text="На западном фронте без перемен" />
 
             <TextView
                 android:id="@+id/film_desc1"
